Replace "ChooseSubscriptionsTask" with SubscriptionComboBox in the input forms.